content/boomerang-flow/3.2.0/how-to-guide/03.edit.md
---
title: Workflow Editor
index: 2
---
# Customize a workflow with Editor

Click any workflow tile open the Editor page for that workflow. The editor is where the magic happens for creating and managing workflows. You define everything to do with your workflow including designing the model, triggers, options, and properties.

### Features

- Drag-and-Drop
- Dynamic property resolution
- Conditional switches
- Link state logic
- Triggers
- Persistent storage
- Parallelism

![Open Editor](./assets/designer-home.png)

Here, you define the workflow using the following data entry properties and attributes. A dynamic graphical user interface is provided for defining the flow:

- **Workflow** - This tab displays an advanced visual drag-and-drop no-code workflow editor, along with a panel of tasks to configure in the editor. 
See [Workflow DAG](#workflow-dag).
- **Properties** - This tab accesses properties that can be defined or updated for the workflow. See [Workflow Properties](#properties).
- **Configure** - This tab accesses triggers and optional controls that further refine the workflow.
- **Change Log** - The Change Log displays metrics that give you insight into the history and health of the workflow.
- **Add a task** - The controls in this panel allow you to define tasks that will be called in the workflow.

## Workflow DAG
The **Workflow** tab accesses the drag-and-drop interface for laying out a workflow. 

You create a workflow by connecting a series of tasks laid out left-to-right, with links between the tasks. These links are what help define the Direct Acyclic Graph (DAG) and associated execution order.

### Links

![Links](./assets/designer-links.gif)

Links are drawn from the outside node on each task. Delete actions are also provided for each node.

Standard links have a state feature: Always Run, Success, and Failure. This is a simple but effective way of determining whether the status of a task is important. You can ask yourself "Is it ok for this task to fail?" or "Do I want a particular action to occur based on state?". For example, you could have a subsequent task that raises an alert to be actioned if an important task fails.

Switch links have no state. Instead, they have a condition value and are shown by a pencil icon. More on this in Switches.

### Task panel

The Task panel is on the left hand side of the interface. This is where you will find all the tasks, grouped by category, that can be dragged onto a workflow and initialized.

#### Switches

![Switches](./assets/designer-switches.gif)

Switches are a predefined utility, allowing for simple decisions based on the value of the input. When you add a switch, you can simply set a string value or reference a property, as with dynamic switches that are based on inputs at execution time.

Switch links allow for multiple values to be entered, one per line. Only one must match for this connection to be valid. It can be a plain string or regular expression.

Links from switches are unique. These links have a value instead of a state. The link will be set to `default`, meaning the path taken when no others are matched. To set a value on a switch link, click the pencil icon and toggle the default off.

![Switch Toggle](./assets/designer-switch-default.png)

#### Tasks

Tasks are individually executed containers, and as such, can do anything from simple actions to complex integrations.

Each instantiated task must have a unique name in the workflow. For example, two tasks cannot have the same name in the same workflow and take inputs. The input fields can accept properties such as a previous tasks output property or a workflow property.

## Properties

 The **Properties** tab provides the capabilities to create, edit, and delete input properties for the workflow. Properties can be set for many different parts of the application and are available throughout a workflow or task, and are substituted at execution time.

 Click **Create a new property** and a modal displays. Input values for the properties you want to define, then click **Create**.

 ![Editor Inputs](./assets/designer-properties-create.png)
 
Click any existing property to edit these values at any time. The property is updated for the workflow in real time.

![Create Property](./assets/designer-properties.png)

### Input property syntax and type

Input keys are restricted to numbers, letters and a `.` (period). For example, the following are valid; `valid.key` and `Valid.kEY.123`, however the following are invalid `invalid-key` and `invalid&%#key`.

An input property can be of different types and the screen will update dynamically to help you craft the desired values and defaults.

>**Note**: Dependencies are based on trigger type. Properties will render as per their type. When manually executing a workflow, however, webhook and schedule have particular requirements. Refer to the discussion on triggers in this topic.

| Input Type | Description                                                                      |
| ---------- | -------------------------------------------------------------------------------- |
| Boolean    | Allows for a true / false switch                                                |
| Number     | Allows for integer input                                                         |
| Password   | A secure input field. _Note: In beta 1 the property will be visible in the logs_ |
| Select     | Defined options that can be selected by the user                                 |
| Text       | Single line text input                                                           |
| Text Area  | Multi line text input                                                            |

## Configure

The **Configure** tab on the Editor page is where you configure all the general metadata about the workflow, the triggers, and any advanced options.

![Configure Workflow](./assets/designer-configure2.png)

### General info

- Identify the owning team of the workflow
- Set the unique name of the workflow
- Set a summary or short description. _This shows up on the workflows and execution cards_
- Enter a description
- Select from pre-defined icons

### Triggers

There are multiple trigger types;

- Manual - always enabled and can be triggered from the workflows screen.
- Webhook - requires a token to be provided in the payload of the webhook request along with any required inputs.
- Schedule - is based on cron syntax and by specifying a time zone. Any required inputs must have a default value set as this will be used at running time.
- Action Listener - is a NATS stream to subscribe to. You can optionally choose to send data to ACC.

### Other Options

Enable persistent storage for the duration of the workflow. This allows you to share items between tasks in the workflow during execution i.e. downloading some files and performing an action on those files.

By enabling persistent storage, you will have a data drive (`/data`). Write the output from a task to that folder and you will be able to access that file from a subsequent task.

### Custom Labels

Create pairs of key/value labels to use accross our Flow app. These labels doesn't affect the workflows executions directly, but you can use them for many purposes as integrating with Kubernets to define attributes, organizing assets and, on future releases, filter you activities according to them.

You can create as many labels as you want, as long as they follow the rules listed on [Kubernetes Docs](https://kubernetes.io/docs/concepts/overview/working-with-objects/labels/), but to summarize, here are some things you should have in mind:

For Labels:
- They have two segments: the prefix (optional) and name that are separated by a (`/`).
- Prefix must be a DNS subdomain, in other words, could contains dots (`.`) and be no longer than 253 characters.
- Name must begin with alphanumeric characters and can also contain dashes (-), underscores (_) and dots (.) and be no longer than 63 characters.

For Values:
- Like a Label name, must begin with alphanumeric characters and can also contain dashes (-), underscores (_) and dots (.) and be no longer than 63 characters.

## Change Log and Versioning

Workflows have built-in versioning and Change Log functionality. Every time a user creates a new version of the workflow, a prompt appears and asks for a comment for **Version**. Versions are viewed in the Change Log tab as a record of all changes.

Any version can be rolled back to at any time using the controls on the upper right of the Design tab.

![Change Log and Versioning](./assets/designer-versions.gif)

### Task Icon Naming Conventions

The icons associated with tasks in Editor are paired via a key word system displayed in the table below. If the prefix is found at the beginning of the task name, then the associated Icon in the table will appear with the Task. There are also special cases specified in the table where the prefix can be anywhere in the task name. If the task name does not map with any of the listed prefixes, then the default task icon will be used.

| Prefix    | Needs to be first word | Image Name         | Icon                                                   |
| --------- | ---------------------- | ------------------ | ------------------------------------------------------ |
| activate  | yes                    | Power              | ![activate image](./assets/power.svg)              |
| appcmd    | yes                    | Terminal           | ![appcmd image](./assets/terminal.svg)             |
| approval  | no                     | checkmark--outline | ![approval image](./assets/checkmark--outline.svg) |
| cancel    | yes                    | close--outline     | ![cancel image](./assets/close--outline.svg)       |
| configure | yes                    | filter             | ![configure image](./assets/filter.svg)        |
| create    | yes                    | add--outline       | ![create image](./assets/add--outline.svg)         |
| define    | no                     | edit               | ![define image](./assets/edit.svg)             |
| deploy    | no                     | launch             | ![deploy image](./assets/launch.svg)               |
| disable   | yes                    | close--outline     | ![disable image](./assets/close--outline.svg)      |
| download  | no                     | download           | ![download image](./assets/download.svg)           |
| edit      | no                     | edit               | ![edit image](./assets/edit.svg)                   |
| enable    | yes                    | power              | ![enable image](./assets/power.svg)                |
| export    | yes                    | back-to-top        | ![export image](./assets/back-to-top.svg)          |
| get       | yes                    | search             | ![get image](./assets/search.svg)                  |
| launch    | yes                    | launch             | ![launch image](./assets/launch.svg)               |
| modify    | no                     | edit               | ![modify image](./assets/edit.svg)                 |
| read      | no                     | search             | ![read image](./assets/search.svg)                 |
| register  | yes                    | add-outline        | ![register image](./assets/add--outline.svg)       |
| shell     | yes                    | terminal           | ![shell image](./assets/terminal.svg)              |
| start     | yes                    | power              | ![start image](./assets/power.svg)                 |
| stop      | yes                    | close--outline     | ![stop image](./assets/close--outline.svg)         |
| submit    | yes                    | checkmark--outline | ![submit image](./assets/checkmark--outline.svg)   |
| sync      | yes                    | restart            | ![sync image](./assets/restart.svg)                |
| terminate | yes                    | close--outline     | ![terminate image](./assets/close--outline.svg)    |
| update    | yes                    | restart            | ![update image](./assets/restart.svg)              |
| validate  | yes                    | checkmark--outline | ![validate image](./assets/checkmark--outline.svg) |
| `Default` |                        | predictive         | ![validate image](./assets/predictive.svg)         |







